# pyproper

./: .gitignore  README.md  pyproject.toml
pyproper/: compiler.py  packager.py
