[tool.poetry]
name = "pyproper"
version = "0.1.0"
description = "Python Project Packager"
authors = ["Slavfox <slavfoxman@gmail.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.6,<3.9"
pex = "^2.1.0"
cffi = "^1.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
