[tool.poetry]
name = "pyproper"
version = "0.1.0"
description = "Python Project Packager"
authors = ["Slavfox <slavfoxman@gmail.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.6,<3.9"
cffi = "^1.13.2"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"

[tool.black]
line-length = 79
target-version = ['py35']
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''
(
  /(
      \.git
    | \.mypy_cache
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=79
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
